--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           
           I love building new things and learning new technologies.
           I have mentored over 200 students as i am the house head of the college.</p>
-        <a href="https://drive.google.com/file/d/1SitBP6aWum9yrAoe5d9wUTAzVY5sqFfS/view?usp=sharing" class="cta">Download Resume</a>
+        <a href="https://drive.google.com/file/d/1SitBP6aWum9yrAoe5d9wUTAzVY5sqFfS/view?usp=sharing">Download Resume</a>
       </div>
     </div>
   </section>
