--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         <div class="project-item">
           <div class="project-info">
            
-          <a href="https://temp-weather-new.herokuapp.com/"> <h2>2. Weather WebApp</h2></a>
-            <p>This is a Weather WebApp and it will show us the waether of any place in the world with the help of an API. I have used JavaScript, Node.Js,Express.Js,Handlebars,BootStrap,CSS and API.</p>
+          <a href="https://vidmate.netlify.app/"> <h2>2. Vidmate</h2></a>
+            <p>This is a video chat application. It allows two people to have video call and it also has the functionality of mic.</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
