--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   <section id="hero">
     <div class="hero container">
       <div>
-        <h1>Hello, <span></span></h1>
-        <h1>My Name is <span></span></h1>
-        <h1>Tarun <span></span></h1>
+        <h1>Let's <span></span></h1>
+        <h1>Have some <span></span></h1>
+        <h1>Chai&hearts <span></span></h1>
         
       </div>
     </div>
